# tiny-rust-demo

./: COPYRIGHT  Cargo.toml  Makefile  README.md  build.rs  build.sh  elf.S  elf.s  result.ld  script.ld  tinyrust.rs
.cargo/: config.toml
.github/workflows/: rust.yaml
src/: editor.rs  func.rs  lib.rs  syscall.rs  terminal.rs  termios.rs
